# Environment-Detector

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/grtsinry43/environmentdetector/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  anti_hook.cpp  security_native.cpp
app/src/main/java/com/grtsinry43/environmentdetector/: MainActivity.kt
app/src/main/java/com/grtsinry43/environmentdetector/security/: DeveloperOptionsDetector.kt  EmulatorDetector.kt  EnvironmentDetector.kt  HiddenApiDetector.kt  HookDetector.kt  IntegrityDetector.kt  NativeSecurityDetector.kt  RootDetector.kt  ShizukuDetector.kt
app/src/main/java/com/grtsinry43/environmentdetector/ui/: DetectionScreen.kt  DetectionViewModel.kt
app/src/main/java/com/grtsinry43/environmentdetector/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/grtsinry43/environmentdetector/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
